# lucas

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile.build  INPUT_FIXES.md  LICENSE  LUCAS.knowledge  MODULE.bazel  NOTICE  README.md  WORKSPACE  demo.md  gateway.db  gateway_keys.yml  go.mod  go.sum  hub.yml  main.go  test_rc
.github/workflows/: build.yml  release-old.yml  release.yml
cmd/: BUILD.bazel  bravia.go  cli.go  gateway.go  hub.go  root.go
cmd/cli/: BUILD.bazel  remote.go  setup.go  shared.go  tui.go
internal/: common.go
internal/bravia/: BUILD.bazel  client.go  constants.go  device.go  example.go  remote.go  types.go
internal/cli/: config_manager.go  device_config.go
internal/device/: device.go
internal/gateway/: api.go  auth.go  broker_service.go  config.go  database.go  keys.go  server.go  web.go
internal/gateway/web-dist/: index.html
internal/gateway/web-dist/assets/: index-DCVy6xD8.css  index-ccsl3agk.js
internal/hermes/: broker.go  broker_test.go  client.go  message.go  protocol.go  protocol_test.go  worker.go
internal/hub/: coap_worker.go  config.go  config_api.go  daemon.go  device_manager.go  discovery.go  gateway.go  keys.go  nonce_cache.go  worker_service.go
internal/logger/: BUILD.bazel  logger.go
internal/network/: provider.go  router.go
internal/network/coap/: provider.go
internal/network/zmq/: provider.go
test/bravia/: client_test.go  device_test.go
test/cli/: config_manager_test.go
test/gateway/: database_test.go
test/hermes/: broker_test.go  protocol_test.go
test/hub/: nonce_cache_test.go
test/internal/bravia/: BUILD.bazel  client_test.go  device_test.go
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: ControlGroup.svelte  Dashboard.svelte  DeviceConfiguration.svelte  HubClaiming.svelte  Hubs.svelte  LoginForm.svelte  RegisterForm.svelte  RemoteControl.svelte
web/src/lib/: auth.ts  remoteCommands.ts
