load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix lucas
gazelle(name = "gazelle")

go_library(
    name = "lucas_lib",
    srcs = ["main.go"],
    importpath = "lucas",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "lucas",
    embed = [":lucas_lib"],
    visibility = ["//visibility:public"],
)

# Cross-compilation targets
go_binary(
    name = "lucas_linux_amd64",
    embed = [":lucas_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "lucas_linux_arm64", 
    embed = [":lucas_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "lucas_darwin_arm64",
    embed = [":lucas_lib"],
    goarch = "arm64", 
    goos = "darwin",
    visibility = ["//visibility:public"],
)