module(name = "lucas")

bazel_dep(name = "rules_go", version = "0.48.1")
bazel_dep(name = "gazelle", version = "0.37.0")

# Configure Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Use the go_deps extension to generate repositories
use_repo(
    go_deps,
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_rs_zerolog",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)
