load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "bravia.go",
        "cli.go",
        "hub.go",
        "root.go",
    ],
    importpath = "lucas/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/cli",
        "//internal/bravia",
        "//internal/logger",
        "@com_github_spf13_cobra//:cobra",
    ],
)
