load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cli",
    srcs = ["tui.go"],
    importpath = "lucas/cmd/cli",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_bubbletea//:bubbletea",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
    ],
)
