load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bravia",
    srcs = [
        "client.go",
        "constants.go",
        "device.go",
        "example.go",
        "remote.go",
        "types.go",
    ],
    importpath = "lucas/internal/bravia",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/logger",
        "@com_github_rs_zerolog//:zerolog",
    ],
)
